--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Arial', sans-serif;
     background-color: #040714;
     font-weight: 600;
 
